# CS2-FinalProject

./: CMakeLists.txt  README.txt
include/: alerts.h  alerts_list.h  bst.h  crew_members.h  ship_systems.h
src/: alerts.cpp  alerts_list.cpp  bst.cpp  crew_members.cpp  ship_systems.cpp
tests/: project_tests.cpp
